# sylketech.com

./: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: accessibility.yml  ci.yml  docker.yml
client/: index.html  package.json  pnpm-lock.yaml
client/public/: robots.txt  sitemap.xml
client/public/.well-known/: security.txt
client/scripts/: generate-sitemap.mjs
client/src/: App.tsx  index.css  main.tsx
scripts/: extract-sitemap-url.mjs  run-a11y-tests.mjs
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs
src/: instrumentation-client.ts  sylke.d.ts
src/app/: globals.css  layout.tsx  manifest.json  manifest.ts  page.tsx  robots.ts  sitemap.ts
